package org.jzx.version1;

import com.example.seismic.SeismicDataProto.SeismicAggRecord;
import com.example.seismic.SeismicDataProto.SeismicRecord;
import org.apache.flink.api.common.serialization.SimpleStringEncoder;
import org.apache.flink.api.common.state.ListState;
import org.apache.flink.api.common.state.ListStateDescriptor;
import org.apache.flink.api.common.typeinfo.TypeHint;
import org.apache.flink.api.common.typeinfo.TypeInformation;
import org.apache.flink.configuration.Configuration;
import org.apache.flink.core.fs.Path;
import org.apache.flink.runtime.state.FunctionInitializationContext;
import org.apache.flink.runtime.state.FunctionSnapshotContext;
import org.apache.flink.streaming.api.CheckpointingMode;
import org.apache.flink.streaming.api.datastream.DataStream;
import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
import org.apache.flink.streaming.api.functions.sink.RichSinkFunction;
import org.apache.flink.streaming.api.functions.sink.filesystem.StreamingFileSink;
import org.apache.flink.streaming.api.functions.sink.filesystem.rollingpolicies.DefaultRollingPolicy;
import org.apache.flink.streaming.api.functions.source.RichSourceFunction;
import org.apache.flink.streaming.api.functions.windowing.WindowFunction;
import org.apache.flink.streaming.api.checkpoint.CheckpointedFunction;
import org.apache.flink.streaming.api.windowing.assigners.TumblingProcessingTimeWindows;
import org.apache.flink.streaming.api.windowing.time.Time;
import org.apache.flink.streaming.api.windowing.windows.TimeWindow;
import org.apache.flink.util.Collector;
import org.apache.rocketmq.client.consumer.DefaultMQPushConsumer;
import org.apache.rocketmq.client.consumer.listener.ConsumeConcurrentlyContext;
import org.apache.rocketmq.client.consumer.listener.ConsumeConcurrentlyStatus;
import org.apache.rocketmq.client.consumer.listener.MessageListenerConcurrently;
import org.apache.rocketmq.client.exception.MQClientException;
import org.apache.rocketmq.client.producer.DefaultMQProducer;
import org.apache.rocketmq.common.consumer.ConsumeFromWhere;
import org.apache.rocketmq.common.message.Message;
import org.apache.rocketmq.common.message.MessageExt;
import org.apache.rocketmq.common.message.MessageQueue;
import org.apache.flink.streaming.api.functions.sink.filesystem.rollingpolicies.DefaultRollingPolicy;

import java.time.Duration;
import java.util.HashMap;
import java.util.Map;
import java.util.concurrent.atomic.AtomicBoolean;
import java.util.concurrent.atomic.AtomicInteger;

/**
 * é€‚é…RocketMQ 5.3.0 + Flink 1.17.2 çš„å®Œæ•´ç‰ˆæœ¬
 */
public class SeismicDataFlinkConsumer {

    /**
     * ä¼˜åŒ–åçš„RocketMQ Sourceï¼šé€‚é…RocketMQ 5.3.0ï¼Œç§»é™¤è¿‡æ—¶æ–¹æ³•
     */
    public static class OptimizedRocketMQSource extends RichSourceFunction<SeismicRecord> implements CheckpointedFunction {
        private static final long serialVersionUID = 1L;
        private final AtomicBoolean isRunning = new AtomicBoolean(true);
        private final AtomicInteger msgCount = new AtomicInteger(0);
        private static final int MAX_MSG_NUM = 1000;
        private DefaultMQPushConsumer consumer;
        private final String namesrvAddr;
        private final String topic;
        private SourceContext<SeismicRecord> ctx;
        private Map<MessageQueue, Long> offsetMap = new HashMap<>();
        private transient ListState<Map<MessageQueue, Long>> offsetState;

        public OptimizedRocketMQSource(String namesrvAddr, String topic) {
            this.namesrvAddr = namesrvAddr;
            this.topic = topic;
        }

        @Override
        public void run(SourceContext<SeismicRecord> ctx) throws Exception {
            this.ctx = ctx;
            consumer = new DefaultMQPushConsumer("seismic-flink-limited-group");
            consumer.setNamesrvAddr(namesrvAddr);
            consumer.setConsumeFromWhere(ConsumeFromWhere.CONSUME_FROM_LAST_OFFSET);
            // RocketMQ 5.3.0 é…ç½®æ¶ˆè´¹è¶…æ—¶ï¼ˆæ›¿æ¢åŸsetConsumeTimeoutï¼‰
            consumer.setConsumeTimeout(3000L);
            consumer.setMaxReconsumeTimes(3);
            consumer.subscribe(topic, "*");

            // ã€ä¿®å¤1ã€‘RocketMQ 5.x ç§»é™¤resetOffsetToSpecificTimeï¼Œæ³¨é‡Šè¯¥é€»è¾‘ï¼ˆç®€åŒ–ç‰ˆæ— éœ€æ¢å¤offsetï¼‰
            // if (!offsetMap.isEmpty()) {
            //     consumer.resetOffset(offsetMap, false); // 5.xæ›¿ä»£æ–¹æ³•ï¼ˆå¯é€‰ï¼‰
            // }

            // ã€ä¿®å¤2ã€‘RocketMQ 5.x ä¸­MessageQueueä»ConsumeConcurrentlyContextè·å–
            consumer.registerMessageListener((MessageListenerConcurrently) (msgs, context) -> {
                synchronized (ctx.getCheckpointLock()) {
                    for (MessageExt msg : msgs) {
                        if (msgCount.get() >= MAX_MSG_NUM) {
                            cancel();
                            return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
                        }

                        int currentCount = msgCount.incrementAndGet();
                        System.out.println("ğŸ“¥ æ”¶åˆ°ç¬¬" + currentCount + "æ¡RocketMQæ¶ˆæ¯ï¼šmsgId=" + msg.getMsgId());
                        try {
                            SeismicRecord record = SeismicRecord.parseFrom(msg.getBody());
                            ctx.collect(record);
                            // ã€ä¿®å¤3ã€‘ä»contextè·å–MessageQueueï¼Œæ›¿ä»£msg.getMessageQueue()
                            MessageQueue mq = context.getMessageQueue();
                            offsetMap.put(mq, msg.getQueueOffset() + 1);
                        } catch (Exception e) {
                            System.err.println("âš ï¸ Protobufè§£æå¤±è´¥ï¼ˆmsgId=" + msg.getMsgId() + "ï¼‰ï¼š" + e.getMessage());
                            return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
                        }

                        if (currentCount >= MAX_MSG_NUM) {
                            System.out.println("âœ… å·²æ¶ˆè´¹" + MAX_MSG_NUM + "æ¡æ•°æ®ï¼Œå‡†å¤‡åœæ­¢ä»»åŠ¡");
                            cancel();
                            break;
                        }
                    }
                }
                return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
            });

            try {
                consumer.start();
                System.out.println("âœ… RocketMQæ¶ˆè´¹è€…å¯åŠ¨æˆåŠŸï¼NameServer=" + namesrvAddr + "ï¼ŒTopic=" + topic);
            } catch (MQClientException e) {
                System.err.println("âŒ RocketMQå¯åŠ¨å¤±è´¥ï¼åŸå› ï¼š" + e.getErrorMessage());
                throw new RuntimeException("RocketMQåˆå§‹åŒ–å¤±è´¥", e);
            }

            while (isRunning.get() && msgCount.get() < MAX_MSG_NUM) {
                Thread.sleep(1000);
            }
        }

        @Override
        public void cancel() {
            isRunning.set(false);
            if (consumer != null) {
                consumer.shutdown();
                System.out.println("ğŸ›‘ RocketMQæ¶ˆè´¹è€…å·²å…³é—­");
            }
            if (ctx != null) {
                ctx.close();
            }
        }

        @Override
        public void snapshotState(FunctionSnapshotContext context) throws Exception {
            offsetState.clear();
            offsetState.add(offsetMap);
            System.out.println("ğŸ“Œ ä¿å­˜Checkpointï¼Œå½“å‰offsetï¼š" + offsetMap);
        }

        @Override
        public void initializeState(FunctionInitializationContext context) throws Exception {
            offsetState = context.getOperatorStateStore().getListState(
                    new ListStateDescriptor<>("rocketmq-offsets",
                            TypeInformation.of(new TypeHint<Map<MessageQueue, Long>>() {})));
            if (context.isRestored()) {
                for (Map<MessageQueue, Long> state : offsetState.get()) {
                    offsetMap.putAll(state);
                }
                System.out.println("âœ… ä»Checkpointæ¢å¤offsetï¼š" + offsetMap);
            }
        }
    }

    /**
     * é€‚é…Flink 1.17.2 çš„RocketMQèšåˆSink
     */
    static class RocketMQAggSink extends RichSinkFunction<SeismicAggRecord> {
        private transient DefaultMQProducer producer;
        private final String namesrvAddr;
        private final String topic;

        public RocketMQAggSink(String namesrvAddr, String topic) {
            this.namesrvAddr = namesrvAddr;
            this.topic = topic;
        }

        // ã€ä¿®å¤4ã€‘å¯¼å…¥org.apache.flink.configuration.Configurationï¼Œé€‚é…Flink 1.17.2
        @Override
        public void open(Configuration parameters) throws Exception {
            super.open(parameters); // å¿…é¡»è°ƒç”¨çˆ¶ç±»æ–¹æ³•
            producer = new DefaultMQProducer("seismic-agg-producer-group");
            producer.setNamesrvAddr(namesrvAddr);
            // RocketMQ 5.3.0 éœ€è®¾ç½®è¶…æ—¶æ—¶é—´
            producer.setSendMsgTimeout(3000);
            producer.start();
            System.out.println("âœ… èšåˆç»“æœRocketMQç”Ÿäº§è€…å¯åŠ¨æˆåŠŸ");
        }

        @Override
        public void invoke(SeismicAggRecord value, Context context) throws Exception {
            byte[] payload = value.toByteArray();
            Message msg = new Message(topic, payload);
            msg.putUserProperty("sensor_id", value.getSensorId());
            producer.send(msg);
            System.out.println("ğŸ“¤ èšåˆç»“æœå‘é€è‡³RocketMQï¼šsensorId=" + value.getSensorId());
        }

        @Override
        public void close() throws Exception {
            super.close(); // å¿…é¡»è°ƒç”¨çˆ¶ç±»æ–¹æ³•
            if (producer != null) {
                producer.shutdown();
                System.out.println("ğŸ›‘ èšåˆç»“æœRocketMQç”Ÿäº§è€…å·²å…³é—­");
            }
        }
    }

    public static void main(String[] args) throws Exception {
        // 1. Flinkç¯å¢ƒåˆå§‹åŒ–
        StreamExecutionEnvironment env = StreamExecutionEnvironment.getExecutionEnvironment();
        env.setParallelism(1);
        env.enableCheckpointing(10000);
        env.getCheckpointConfig().setCheckpointTimeout(60000);
        // ã€ä¿®å¤5ã€‘Flink 1.17.2 ç›´æ¥ä½¿ç”¨CheckpointingModeæšä¸¾ï¼Œæ— éœ€CheckpointConfigå‰ç¼€
        env.getCheckpointConfig().setCheckpointingMode(CheckpointingMode.EXACTLY_ONCE);

        // 2. æ·»åŠ ä¼˜åŒ–åçš„RocketMQ Source
        String rocketMQNamesrv = "192.168.56.151:9876";
        String rocketMQTopic = "seismic-data-topic";
        DataStream<SeismicRecord> seismicStream = env.addSource(
                new OptimizedRocketMQSource(rocketMQNamesrv, rocketMQTopic)
        ).name("Optimized-RocketMQ-Source");

        // 3. è¿‡æ»¤æ— æ•ˆæ•°æ®
        DataStream<SeismicRecord> validSeismicStream = seismicStream
                .filter(record -> {
                    boolean qualityValid = record.getDataQuality() == 1;
                    boolean amplitudeValid = record.getSeismicAmplitude() >= -100 && record.getSeismicAmplitude() <= 200;
                    boolean sensorIdValid = record.getSensorId() != null && record.getSensorId().startsWith("sensor_");
                    boolean lngValid = record.getLongitude() >= 73 && record.getLongitude() <= 135;
                    boolean latValid = record.getLatitude() >= 3 && record.getLatitude() <= 53;

                    boolean isValid = qualityValid && amplitudeValid && sensorIdValid && lngValid && latValid;
                    if (!isValid) {
                        System.out.println("ğŸš« è¿‡æ»¤æ— æ•ˆæ•°æ®ï¼šsensorId=" + record.getSensorId()
                                + " | è´¨é‡=" + record.getDataQuality()
                                + " | å¹…å€¼=" + record.getSeismicAmplitude());
                    }
                    return isValid;
                })
                .name("Filter-Invalid-Data");

        // 4. 1ç§’çª—å£èšåˆ
        DataStream<SeismicAggRecord> aggStream = validSeismicStream
                .keyBy(SeismicRecord::getSensorId)
                .window(TumblingProcessingTimeWindows.of(Time.seconds(1)))
                .apply(new WindowFunction<SeismicRecord, SeismicAggRecord, String, TimeWindow>() {
                    @Override
                    public void apply(String sensorId, TimeWindow window, Iterable<SeismicRecord> records, Collector<SeismicAggRecord> out) throws Exception {
                        int count = 0;
                        float sumAmplitude = 0;
                        float maxAmplitude = Float.MIN_VALUE;
                        float minAmplitude = Float.MAX_VALUE;
                        int pCount = 0, sCount = 0, nCount = 0;

                        for (SeismicRecord record : records) {
                            count++;
                            sumAmplitude += record.getSeismicAmplitude();
                            maxAmplitude = Math.max(maxAmplitude, record.getSeismicAmplitude());
                            minAmplitude = Math.min(minAmplitude, record.getSeismicAmplitude());

                            switch (record.getPhaseType()) {
                                case "P":
                                    pCount++;
                                    break;
                                case "S":
                                    sCount++;
                                    break;
                                case "N":
                                    nCount++;
                                    break;
                                default:
                                    nCount++;
                                    break;
                            }
                        }

                        float avgAmplitude = count == 0 ? 0 : sumAmplitude / count;

                        SeismicAggRecord aggRecord = SeismicAggRecord.newBuilder()
                                .setSensorId(sensorId)
                                .setWindowStartTs(window.getStart())
                                .setWindowEndTs(window.getEnd())
                                .setAvgAmplitude(avgAmplitude)
                                .setMaxAmplitude(maxAmplitude)
                                .setMinAmplitude(minAmplitude)
                                .setPPhaseCount(pCount)
                                .setSPhaseCount(sCount)
                                .setNPhaseCount(nCount)
                                .build();

                        out.collect(aggRecord);
                    }
                })
                .name("1s-Window-Aggregation");

        // 5. æ‰“å°èšåˆç»“æœ
        aggStream.map(aggRecord ->
                        String.format("ğŸ“Š èšåˆç»“æœï¼šsensorId=%s | çª—å£=[%d, %d) | å‡å€¼=%.2f | æœ€å¤§=%.2f | Pæ³¢=%d | Sæ³¢=%d | å™ªå£°=%d",
                                aggRecord.getSensorId(),
                                aggRecord.getWindowStartTs(),
                                aggRecord.getWindowEndTs(),
                                aggRecord.getAvgAmplitude(),
                                aggRecord.getMaxAmplitude(),
                                aggRecord.getPPhaseCount(),
                                aggRecord.getSPhaseCount(),
                                aggRecord.getNPhaseCount())
                )
                .name("Format-Agg-Data")
                .print("èšåˆè¾“å‡º");
        // 6. æœ¬åœ°æ–‡ä»¶Sink
        DataStream<String> aggStrStream = aggStream.map(aggRecord ->
                String.join(",",
                        aggRecord.getSensorId(),
                        String.valueOf(aggRecord.getWindowStartTs()),
                        String.valueOf(aggRecord.getWindowEndTs()),
                        String.valueOf(aggRecord.getAvgAmplitude()),
                        String.valueOf(aggRecord.getMaxAmplitude()),
                        String.valueOf(aggRecord.getMinAmplitude()),
                        String.valueOf(aggRecord.getPPhaseCount()),
                        String.valueOf(aggRecord.getSPhaseCount()),
                        String.valueOf(aggRecord.getNPhaseCount())
                )
        ).name("Agg-Data-To-CSV");
        /*
        StreamingFileSink<String> fileSink = StreamingFileSink
                .forRowFormat(new Path("E:\\Desktop\\sink_output"), new SimpleStringEncoder<String>("UTF-8"))
                .withRollingPolicy(
                        DefaultRollingPolicy.builder()
                                .withRolloverInterval(Duration.ofHours(1))
                                .withInactivityInterval(Duration.ofMinutes(10))
                                .withMaxPartSize(1024 * 1024 * 100)
                                .build()
                )
                .build();
         */
        StreamingFileSink<String> fileSink = StreamingFileSink
                .forRowFormat(new Path("file:///E:/Desktop/sink_output"), new SimpleStringEncoder<String>("UTF-8"))
                .withRollingPolicy(
                        DefaultRollingPolicy.builder()
                                .withRolloverInterval(Duration.ofSeconds(30))  // 30ç§’å¼ºåˆ¶æ»šåŠ¨
                                .withInactivityInterval(Duration.ofSeconds(10)) // 10ç§’æ— æ•°æ®æ»šåŠ¨
                                .withMaxPartSize(1024 * 1024 * 1) // 1MBå°±æ»šåŠ¨ï¼ˆæµ‹è¯•ç”¨ï¼‰
                                .build()
                )
                .build();
        aggStrStream.addSink(fileSink).name("Local-File-Sink");
        /*
        // 7. RocketMQèšåˆç»“æœSink
        aggStream.addSink(new RocketMQAggSink(rocketMQNamesrv, "seismic-agg-topic"))
                .name("RocketMQ-Agg-Sink");

         */
        // 8. æ‰§è¡Œä»»åŠ¡
        System.out.println("ğŸš€ å¼€å§‹æ‰§è¡ŒFlinkå…¨é“¾è·¯ä»»åŠ¡...");
        env.execute("Seismic-Data-Stream-Processing-Job");
    }
}